--- a/core/ui/src/main/res/values-nb-rNO/strings.xml
+++ b/core/ui/src/main/res/values-nb-rNO/strings.xml
@@ -421,7 +421,7 @@
     <string name="autotune_select_profile">Velg profil du vil justere</string>
     <!-- Alerts -->
     <string name="raise_notifications_as_android_notifications">Bruk systemvarslinger for alarmer og varslinger</string>
-    <string name="urgent_alarm">Kritisk alarm</string>
+    <string name="urgent_alarm">Viktig varsel</string>
     <string name="info">INFO</string>
     <!-- BolusWizard -->
     <string name="bolus_advisor">Bolusveiviser</string>
@@ -518,7 +518,7 @@
     <string name="export_expired">Utløpt</string>
     <string name="export_disabled">Deaktivert</string>
     <string name="export_failed">Mislyktes</string>
-    <string name="export_alert">VARSEL</string>
+    <string name="export_alert">Varsel</string>
     <!-- <unattended_export result messages> -->
     <string name="export_result_message_exported">Innstillinger eksportert</string>
     <string name="export_result_message_failed">Eksport av innstillinger MISLYKTES!</string>
