--- a/wear/src/main/res/values-iw-rIL/strings.xml
+++ b/wear/src/main/res/values-iw-rIL/strings.xml
@@ -10,6 +10,7 @@
     <string name="label_actions_tile">AAPS (פעולות)</string>
     <string name="label_temp_target_tile">AAPS (מטרה זמנית)</string>
     <string name="label_quick_wizard_tile">AAPS (אשף מהיר)</string>
+    <string name="label_user_action_tile">AAPS(פעולת משתמש)</string>
     <string name="label_warning_sync">אין נתונים!</string>
     <string name="label_warning_old">נתונים ישנים!</string>
     <string name="label_warning_since">מאז %1$s</string>
@@ -87,6 +88,7 @@
     <string name="action_duration">משך</string>
     <string name="action_tempt_confirmation">התבקש ערך מטרה זמני</string>
     <string name="action_quick_wizard_confirmation">התבקש אשף מהיר</string>
+    <string name="action_user_action_confirmation">נחוצה פעולת משתמש</string>
     <string name="action_treatment_confirmation">התבקש טיפול</string>
     <string name="action_bolus_confirmation">התבקש בולוס</string>
     <string name="action_wizard_confirmation">התבקש חישוב</string>
@@ -145,6 +147,7 @@
     <string name="pref_simplify_ui_sum">מציג רק את השעה ואת רמת הסוכר</string>
     <string name="pref_vibrate_hourly">רטט אחת לשעה</string>
     <string name="pref_show_weeknumber">הצג מס\' שבוע</string>
+    <string name="pref_switch_external">החלף נתונים חיצוניים בפני השעון</string>
     <string name="custom_pref_show_seconds">הצג שניות</string>
     <string name="digitalstyle_pref_your_style">הסגנון שלכם:</string>
     <string name="digitalstyle_style_none">ללא סגנון</string>
