--- a/wear/src/main/res/values-nb-rNO/strings.xml
+++ b/wear/src/main/res/values-nb-rNO/strings.xml
@@ -11,6 +11,7 @@
     <string name="label_actions_tile">AAPS(Handlinger)</string>
     <string name="label_temp_target_tile">AAPS(Midl. Mål)</string>
     <string name="label_quick_wizard_tile">AAPS(Hurtigknapp)</string>
+    <string name="label_user_action_tile">AAPS(Brukerhandling)</string>
     <string name="label_warning_sync">Ingen data!</string>
     <string name="label_warning_old">Gamle data!</string>
     <string name="label_warning_since">Siden %1$s</string>
@@ -98,6 +99,7 @@
     <string name="action_duration">Varighet</string>
     <string name="action_tempt_confirmation">Midlertidig mål forespurt</string>
     <string name="action_quick_wizard_confirmation">Hurtigknapp forespurt</string>
+    <string name="action_user_action_confirmation">Brukerhandling forespurt</string>
     <string name="action_treatment_confirmation">Behandling forespurt</string>
     <string name="action_bolus_confirmation">Bolus forespurt</string>
     <string name="action_wizard_confirmation">Beregning forespurt</string>
@@ -157,6 +159,7 @@
     <string name="pref_vibrate_hourly">Vibrer hver time</string>
     <string name="pref_show_weeknumber">Vis ukenummer</string>
     <string name="pref_include_external">Inkluder eksterne visninger i mal</string>
+    <string name="pref_switch_external">Bytt ekstern dataer i urskiven</string>
     <string name="custom_pref_show_seconds">Vis sekunder</string>
     <string name="digitalstyle_pref_your_style">Din stil:</string>
     <string name="digitalstyle_style_none">ingen stil</string>
