--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="pref_show_rig_battery">Show Rig Battery</string>
     <string name="pref_show_basal_rate">Show Basal Rate</string>
     <string name="pref_show_temp_target">Show Temp Target</string>
+    <string name="pref_show_reservoir_level">Show Reservoir Level Target</string>
     <string name="pref_show_loop_status">Show Loop Status</string>
     <string name="pref_show_bg">Show BG</string>
     <string name="pref_show_bgi">Show BGI</string>
@@ -230,6 +231,7 @@
     <string name="key_show_rig_battery" translatable="false">show_rig_battery</string>
     <string name="key_show_temp_basal" translatable="false">show_temp_basal</string>
     <string name="key_show_temp_target" translatable="false">show_temp_target</string>
+    <string name="key_show_reservoir_level" translatable="false">show_reservoir_level</string>
     <string name="key_vibrate_hourly" translatable="false">vibrate_hourly</string>
     <string name="key_match_divider" translatable="false">match_divider</string>
     <string name="key_simplify_ui" translatable="false">simplify_ui</string>
