Adjust strings for Temp-Target preferences

--- a/plugins/main/src/main/res/values/strings.xml
+++ b/plugins/main/src/main/res/values/strings.xml
@@ -251,12 +251,12 @@
     <string name="thirdcarbsincrement">Third carbs increment</string>
     <string name="cgm">CGM</string>
     <string name="default_temptargets">Default Temp-Targets</string>
-    <string name="eatingsoon_duration">eatingsoon duration</string>
-    <string name="eatingsoon_target">eatingsoon target</string>
-    <string name="activity_duration">activity duration</string>
-    <string name="activity_target">activity target</string>
-    <string name="hypo_duration">hypo duration</string>
-    <string name="hypo_target">hypo target</string>
+    <string name="eatingsoon_duration">Eating Soon duration (minutes)</string>
+    <string name="eatingsoon_target">Eating Soon target value</string>
+    <string name="activity_duration">Activity duration (minutes)</string>
+    <string name="activity_target">Activity target value</string>
+    <string name="hypo_duration">Hypo duration (minutes)</string>
+    <string name="hypo_target">Hypo target value</string>
     <string name="fill_bolus_title">Fill/Prime standard insulin amounts</string>
     <string name="button1">Button 1</string>
     <string name="button2">Button 2</string>
