--- a/plugins/aps/src/main/res/values-nb-rNO/strings.xml
+++ b/plugins/aps/src/main/res/values-nb-rNO/strings.xml
@@ -66,9 +66,9 @@
     <string name="enable_smb_summary">Bruk Super Micro Boluser i kombinasjon med midlertidig basal for raskere resultat</string>
     <string name="enable_uam_summary">Oppdage uannonsert måltid (UAM)</string>
     <string name="enable_smb_always">Aktiver SMB alltid</string>
-    <string name="enable_smb_always_summary">Aktiver SMB alltid uavhengig av COB, lave midlertidige mål eller boluser. Bare mulig med en bra filtrert BS-kilde som f.eks. Dexcom G6/G7</string>
+    <string name="enable_smb_always_summary">Aktiver SMB alltid uavhengig av COB, midlertidige mål eller boluser. Bare mulig med en BS-kilde som støtter avansert filtrering av data</string>
     <string name="enable_smb_after_carbs">Aktiver SMB etter karbohydrater</string>
-    <string name="enable_smb_after_carbs_summary">Aktiver SMB i 6 timer etter inntak av karbohydrater, selv med 0 COB (Karbo ombord). Bare mulig med en bra filtrert BS-kilde som f. eks. Dexcom G6/G7</string>
+    <string name="enable_smb_after_carbs_summary">Aktiver SMB i 6 timer etter inntak av karbohydrater, selv med 0 COB. Bare mulig med en BS-kilde som støtter avansert filtrering av data</string>
     <string name="enable_smb_with_cob">Aktiver SMB med COB</string>
     <string name="enable_smb_with_cob_summary">Aktiver SMB når COB (karbohydrater ombord) er aktiv.</string>
     <string name="enable_smb_with_temp_target">Aktiver SMB med lav midlertidig målverdi</string>
@@ -122,7 +122,7 @@
     <string name="loop_open_mode_min_change">Minste endringsforespørsel [%]</string>
     <string name="loop_open_mode_min_change_summary" formatted="false">I åpen Loopmodus vil AAPS be deg utføre en hendelse hvis forandringen er større enn denne verdien i %. Standard verdi er 20%</string>
     <string name="fallback_smb_no_tdd">Går tilbake til SMB. Ikke nok data om total daglig dose.</string>
-    <string name="fallback_to_isf_no_tdd">Faller tilbake til profilsensitivitet. Ikke nok TDD-data.</string>
+    <string name="fallback_to_isf_no_tdd">Faller tilbake til profilsensitivitet. Ikke nok TDD-data. Årsak: %1$s</string>
     <!-- Autotune -->
     <string name="autotune_description">Hjelp til potensiell justering av profilen (ISF, IK og basaldoser)</string>
     <string name="autotune_shortname">AT</string>
