--- a/plugins/main/src/main/res/values-it-rIT/strings.xml
+++ b/plugins/main/src/main/res/values-it-rIT/strings.xml
@@ -39,7 +39,7 @@
     <string name="smscommunicator_stops_ns_with_code">Per disabilitare il servizio di controllo remoto tramite SMS rispondi col codice %1$s.\n\nRicorda che potrai riattivarlo solo in maniera diretta dallo smartphone master in cui è installato AAPS.</string>
     <string name="smscommunicator_stopped_sms">Servizio di controllo remoto tramite SMS stoppato. Per riattivarlo, usa lo smartphone master in cui è installato AAPS.</string>
     <string name="smscommunicator_calibration_reply_with_code">Per inviare la calibrazione %1$.2f rispondi col codice %2$s</string>
-    <string name="smscommunicator_bolus_failed">Bolo fallito</string>
+    <string name="smscommunicator_bolus_failed">Bolo non riuscito. Verificare lo stato reale prima di inviare un altro comando!</string>
     <string name="smscommunicator_remote_bolus_min_distance_summary">Numero minimo di minuti che devono trascorrere tra un bolo remoto e il successivo</string>
     <string name="smscommunicator_remote_bolus_min_distance">Quanti minuti devono trascorrere, almeno, tra un bolo e il successivo</string>
     <string name="smscommunicator_remote_bolus_min_distance_caveat">Per la tua sicurezza, per modificare questa preferenza hai bisogno di aggiungere almeno 2 numeri di telefono.</string>
@@ -239,12 +239,12 @@
     <string name="thirdcarbsincrement">Terzo incremento di CHO</string>
     <string name="cgm">CGM</string>
     <string name="default_temptargets">Target temporanei predefiniti</string>
-    <string name="eatingsoon_duration">target \"pasto a breve\" - durata</string>
-    <string name="eatingsoon_target">target \"pasto a breve\"</string>
-    <string name="activity_duration">target \"attività fisica\" - durata</string>
-    <string name="activity_target">target \"attività fisica\"</string>
-    <string name="hypo_duration">target \"ipoglicemia\" - durata</string>
-    <string name="hypo_target">target \"ipoglicemia\"</string>
+    <string name="eatingsoon_duration">Durata Pasto a breve (minuti)</string>
+    <string name="eatingsoon_target">Valore target Pasto a breve</string>
+    <string name="activity_duration">Durata Attività (minuti)</string>
+    <string name="activity_target">Valore target Attività</string>
+    <string name="hypo_duration">Durata Ipoglicemia (minuti)</string>
+    <string name="hypo_target">Valore target Ipoglicemia</string>
     <string name="fill_bolus_title">Carica/Riempi: quantità standard di insulina</string>
     <string name="button1">Tasto 1</string>
     <string name="button2">Tasto 2</string>
