--- a/plugins/main/src/main/res/values-ru-rRU/strings.xml
+++ b/plugins/main/src/main/res/values-ru-rRU/strings.xml
@@ -39,7 +39,6 @@
     <string name="smscommunicator_stops_ns_with_code">Чтобы отключить службу удаленных SMS-сообщений ответьте кодом %1$s.\n\n Имейте в виду, что вы сможете вновь активировать ее только с основного телефона AAPS.</string>
     <string name="smscommunicator_stopped_sms">Удаленная служба SMS остановлена. Для ее реактивации используйте AAPS на главном смартфоне.</string>
     <string name="smscommunicator_calibration_reply_with_code">Чтобы отправить калибровку %1$.2f ответьте кодом %2$s</string>
-    <string name="smscommunicator_bolus_failed">Подача болюса не состоялась</string>
     <string name="smscommunicator_remote_bolus_min_distance_summary">Минимальное количество минут между одним удаленным болюсом и следующим</string>
     <string name="smscommunicator_remote_bolus_min_distance">Минимум минут между одним болюсом и следующим</string>
     <string name="smscommunicator_remote_bolus_min_distance_caveat">В целях безопасности, для изменения этого параметра необходимо добавить не менее 2 телефонных номеров.</string>
@@ -239,12 +238,12 @@
     <string name="thirdcarbsincrement">Третий шаг увеличения углеводов</string>
     <string name="cgm">Мониторинг ГК</string>
     <string name="default_temptargets">Временные цели по умолчанию</string>
-    <string name="eatingsoon_duration">продолжительность ожидания приема пищи eatingsoon</string>
-    <string name="eatingsoon_target">целевое значение ГК при ожидаемом приеме пищи eatingsoon</string>
-    <string name="activity_duration">длительность нагрузки</string>
-    <string name="activity_target">целевое значение ГК при физической нагрузке</string>
-    <string name="hypo_duration">длительность гипо</string>
-    <string name="hypo_target">целевое значение ГК при гипо</string>
+    <string name="eatingsoon_duration">Продолжительность ВЦ Ожидаемый прием пищи (в минутах)</string>
+    <string name="eatingsoon_target">Целевое значение ВЦ Ожидаемый прием пищи</string>
+    <string name="activity_duration">Продолжительность ВЦ Нагрузка (минут)</string>
+    <string name="activity_target">Целевое значение ВЦ Нагрузка</string>
+    <string name="hypo_duration">Продолжительность ВЦ Гипо (минуты)</string>
+    <string name="hypo_target">Целевое значение ВЦ Гипо</string>
     <string name="fill_bolus_title">Заполнить стандартное количество инсулина</string>
     <string name="button1">Кнопка 1</string>
     <string name="button2">Кнопка 2</string>
