--- a/wear/src/main/res/values-zh-rTW/strings.xml
+++ b/wear/src/main/res/values-zh-rTW/strings.xml
@@ -33,7 +33,7 @@
     <string name="pref_show_rig_battery">顯示裝置電池</string>
     <string name="pref_show_basal_rate">顯示基礎率</string>
     <string name="pref_show_temp_target">顯示臨時目標</string>
-    <string name="pref_show_reservoir_level">顯示胰島素儲存量目標</string>
+    <string name="pref_show_reservoir_level">顯示胰島素庫存劑量</string>
     <string name="pref_show_loop_status">l</string>
     <string name="pref_show_bg">顯示血糖指數</string>
     <string name="pref_show_bgi">顯示血糖影響</string>
